_sass/_stylesheet.scss
$mobile: "width <= 720px";
$desktop: "width >= 720px";

$primary-color: #0F002A;
$secondary-color: #e6ffef;
$tritary-color: #877F94;

:root {
  --content-max-width: min(100% - 2 * var(--padding) ,40.625rem);
  --sidebar-width: min(100% - 18px, 360px);
  --header-padding: 24px;
  --padding: 12px;
  --border-radius: 12px;
  --header-font-size: 2em;
  --subtitle-font-size: 0.8em;
  --transition-duration: 300ms;
}

body {
  background-color: $primary-color;
  color: $secondary-color;
  font-family: system-ui,sans-serif;

  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: [full-width-start] 1fr [content-start] var(--content-max-width) [content-end] 1fr [full-width-end];

  & > * {
    display: grid;
    grid-template-columns: subgrid;
    grid-auto-rows: min-content;
    grid-column: content;

    border: solid;
    border-width: calc(var(--border-radius) / 2);
    border-color: $tritary-color;
    border-radius: var(--border-radius);
  }

  & > main {
    border: none;
  }

  & > header {
    font-size: var(--header-font-size);
    background-color: $secondary-color;
    grid-column: full-width;
    padding: calc(var(--padding) / 3);
    position: sticky;
    top: var(--padding);
  }

  & > footer {
    color: $primary-color;
    background-color: $secondary-color;
    padding: var(--padding);
    grid-column: full-width;
  }
}

// Navigation + Sidebar
.site-nav {
  display: grid;
  grid-column: full-width;
  margin-inline: auto;
  width: calc(100% - 2 * var(--header-padding));
}

.center-box {
  display: flex;
  justify-content: center;

  & > .center-item {
    display: flex;
    justify-content: center;
    width: 90%;
  }
}

.nav-prompt-grid {
  display: grid;

  & > * {
    text-align: center;
  }
}

.nav-add-icon {
  display: flex;
  justify-content: center;
  align-items: center;
}

.icon-button {
    background-color: $secondary-color;
    border-style: none;
    border-radius: var(--border-radius);
    padding: calc(var(--padding) / 2);
    padding-bottom: 3px;
    &:hover, &:active{
      background-color: rgba(135, 127, 148, 0.75);
      transition-duration: var(--transition-duration);
    }
}

.new-tab-button {
  anchor-name: --new-tab-anchor;
}

.navbar-link {
  font-weight: bold;
  text-align: center;
}

.subtitle {
  color: $primary-color;
  font-weight: 400;
  font-size: var(--subtitle-font-size);
  user-select: none;
}

.site-title, .navbar-link {
  color: $primary-color;
  border-radius: var(--border-radius);
  padding: calc(var(--padding) / 3) var(--padding);

  &:hover, &:focus {
    background-color: $primary-color;
    color: $secondary-color;
  }

  &:hover {
    transition-duration: var(--transition-duration);
  }
}

.skip-navigation {
  font-size: var(--font-size-big);
  font-weight: 900;
  position: absolute;
  transform: translateY(-200%);
  margin-inline-start: var(--padding);
  padding: var(--padding);

  &:focus {
    transform: translateY(0);
  }
}

.pop-over {
  position: absolute;
  position-anchor: --new-tab-anchor;
  margin: 0;
  inset: auto;
  top: anchor(top);
  right: anchor(right);

  color: $primary-color;
  background-color: $secondary-color;

  border: solid;
  border-width: calc(var(--border-radius) / 2);
  border-color: $tritary-color;
  border-radius: var(--border-radius);

  transform: translate(50px, 45px);
}

.pop-over-content {
  display: grid;
}

.pop-over:popover-open {
    display: block;
}

// Blinking cursor elements.
.blinking-cursor {
  animation: cursor 1.5s infinite;
}

@keyframes cursor {
  0%, 100% {
    opacity: 0;
  }

  60% {
    opacity: 1;
  }
}

// Misc
.site-code {
  user-select: none;
  font-weight: bold;
}

img {
  width: 200px;
}

.icons {
  width: 32px;
  height: 32px;
}

a {
  text-decoration: none;
  color: $tritary-color;
}

@media screen and ($mobile) {
  body > header {
    padding: var(--padding) 0px;
  }

  .center-item {
    grid-auto-flow: row;
  }

  body > header {
    display: inherit;
  }

  .site-nav {
    grid-template-columns: none;
    grid-gap: var(--padding);
  }
}

